--- a/IDE/JSEditor/src/exemple_full.html
+++ b/IDE/JSEditor/src/exemple_full.html
@@ -12,9 +12,9 @@
 			id: "example_1"	// id of the textarea to transform		
 			,start_highlight: true	// if start with highlight
 			,allow_resize: "both"
-			,allow_toggle: true
-			,language: "en"
-			,syntax: "php"	
+			,allow_toggle: false
+			,language: "ru"
+			,syntax: "python"
 		});
 		
 		
