--- a/IDE/JSEditor/src/edit_area/init.html
+++ b/IDE/JSEditor/src/edit_area/init.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>EditArea - the code editor in a textarea</title>
-	<script language="Javascript" type="text/javascript" src="app-storage:/libs/edit_area/edit_area_loader.js"></script>
-	<script language="Javascript" type="text/javascript" src="app-storage:/libs/edit_area/AIRAliases.js"></script>
+	<script language="Javascript" type="text/javascript" src="app-storage:/edit_area/edit_area_loader.js"></script>
+	<script language="Javascript" type="text/javascript" src="app-storage:/edit_area/AIRAliases.js"></script>
 </head>
 <body>
 <form action="" method="post">
