--- a/Help/Editor/v.01/libs/tinymce/examples/black.html
+++ b/Help/Editor/v.01/libs/tinymce/examples/black.html
@@ -15,7 +15,8 @@
 		theme : "advanced",
 		skin : "o2k7",
 		skin_variant : "black",
-		plugins : "safari,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,inlinepopups",
+		plugins : "safari,pagebreak,fullscreen,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,noneditable,visualchars,nonbreaking,xhtmlxtras,template,inlinepopups",
+		//fullscreen_new_window : true,
 
 		// Theme options
 		theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect",
@@ -25,8 +26,10 @@
 		theme_advanced_toolbar_location : "top",
 		theme_advanced_toolbar_align : "left",
 		theme_advanced_statusbar_location : "bottom",
-		theme_advanced_resizing : true,
+		//theme_advanced_resizing : true,
 
+		height:"50%",
+		width: "100%",
 		// Example content CSS (should be your site CSS)
 		content_css : "css/content.css",
 
@@ -41,21 +44,20 @@
 			username : "Some User",
 			staffid : "991234"
 		}
+		
 	});
+	
 </script>
 <!-- /TinyMCE -->
 
 </head>
-<body>
+<body
 
 <form method="post" action="http://tinymce.moxiecode.com/dump.php?example=true">
 
 	<!-- Gets replaced with TinyMCE, remember HTML in a textarea should be encoded -->
 
-
-
-
-	<textarea id="elm1" name="elm1" rows="15" cols="80" style="width: 80%">
+	<textarea id="elm1" name="elm1">
 		&lt;p&gt;
 			This is some example text that you can edit inside the &lt;strong&gt;TinyMCE editor&lt;/strong&gt;.
 		&lt;/p&gt;
