--- a/Help/Editor/v.01/libs/tinymce/examples/full.html
+++ b/Help/Editor/v.01/libs/tinymce/examples/full.html
@@ -6,11 +6,16 @@
 <!-- TinyMCE -->
 <script type="text/javascript" src="../jscripts/tiny_mce/tiny_mce.js"></script>
 <script type="text/javascript">
+function myCustomInitInstance(inst) {
+	alert("Editor: " + inst.editorId + " is now initialized.");
+}
+
 	tinyMCE.init({
 		// General options
-		mode : "textareas",
+		mode : "exact",
+		elements : "elm1",
 		theme : "advanced",
-		plugins : "safari,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template",
+		plugins : "safari,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,inlinepopups",
 
 		// Theme options
 		theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect",
@@ -24,12 +29,14 @@
 
 		// Example content CSS (should be your site CSS)
 		content_css : "css/content.css",
-
+		
 		// Drop lists for link/image/media/template dialogs
 		template_external_list_url : "lists/template_list.js",
 		external_link_list_url : "lists/link_list.js",
 		external_image_list_url : "lists/image_list.js",
+		
 		media_external_list_url : "lists/media_list.js",
+		init_instance_callback : "myCustomInitInstance",
 
 		// Replace values for the template plugin
 		template_replace_values : {
@@ -37,6 +44,8 @@
 			staffid : "991234"
 		}
 	});
+	
+	
 </script>
 <!-- /TinyMCE -->
 
@@ -44,17 +53,8 @@
 <body>
 
 <form method="post" action="http://tinymce.moxiecode.com/dump.php?example=true">
-	<div>
-		<h3>Full featured example</h3>
-
-		<p>
-			This page shows all available buttons and plugins that are included in the TinyMCE core package.
-			There are more examples on how to use TinyMCE in the <a href="http://wiki.moxiecode.com/examples/tinymce/">Wiki</a>.
-		</p>
-
-		<!-- Gets replaced with TinyMCE, remember HTML in a textarea should be encoded -->
-		<div>
-			<textarea id="elm1" name="elm1" rows="15" cols="80" style="width: 80%">
+	
+			<textarea id="elm1" name="elm1" >
 				&lt;p&gt;
 					This is some example text that you can edit inside the &lt;strong&gt;TinyMCE editor&lt;/strong&gt;.
 				&lt;/p&gt;
@@ -62,23 +62,7 @@
 				Nam nisi elit, cursus in rhoncus sit amet, pulvinar laoreet leo. Nam sed lectus quam, ut sagittis tellus. Quisque dignissim mauris a augue rutrum tempor. Donec vitae purus nec massa vestibulum ornare sit amet id tellus. Nunc quam mauris, fermentum nec lacinia eget, sollicitudin nec ante. Aliquam molestie volutpat dapibus. Nunc interdum viverra sodales. Morbi laoreet pulvinar gravida. Quisque ut turpis sagittis nunc accumsan vehicula. Duis elementum congue ultrices. Cras faucibus feugiat arcu quis lacinia. In hac habitasse platea dictumst. Pellentesque fermentum magna sit amet tellus varius ullamcorper. Vestibulum at urna augue, eget varius neque. Fusce facilisis venenatis dapibus. Integer non sem at arcu euismod tempor nec sed nisl. Morbi ultricies, mauris ut ultricies adipiscing, felis odio condimentum massa, et luctus est nunc nec eros.
 				&lt;/p&gt;
 			</textarea>
-		</div>
-
-		<!-- Some integration calls -->
-		<a href="javascript:;" onmousedown="tinyMCE.get('elm1').show();">[Show]</a>
-		<a href="javascript:;" onmousedown="tinyMCE.get('elm1').hide();">[Hide]</a>
-		<a href="javascript:;" onmousedown="tinyMCE.get('elm1').execCommand('Bold');">[Bold]</a>
-		<a href="javascript:;" onmousedown="alert(tinyMCE.get('elm1').getContent());">[Get contents]</a>
-		<a href="javascript:;" onmousedown="alert(tinyMCE.get('elm1').selection.getContent());">[Get selected HTML]</a>
-		<a href="javascript:;" onmousedown="alert(tinyMCE.get('elm1').selection.getContent({format : 'text'}));">[Get selected text]</a>
-		<a href="javascript:;" onmousedown="alert(tinyMCE.get('elm1').selection.getNode().nodeName);">[Get selected element]</a>
-		<a href="javascript:;" onmousedown="tinyMCE.execCommand('mceInsertContent',false,'<b>Hello world!!</b>');">[Insert HTML]</a>
-		<a href="javascript:;" onmousedown="tinyMCE.execCommand('mceReplaceContent',false,'<b>{$selection}</b>');">[Replace selection]</a>
-
-		<br />
-		<input type="submit" name="save" value="Submit" />
-		<input type="reset" name="reset" value="Reset" />
-	</div>
+		
 </form>
 
 </body>
