--- a/Help/Editor/v.01/src/libs/ckeditor/_samples/fullpage.html
+++ b/Help/Editor/v.01/src/libs/ckeditor/_samples/fullpage.html
@@ -7,7 +7,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 <head>
 	<title>Full Page Editing with Document Properties Plugin &mdash; CKEditor Sample</title>
 	<meta content="text/html; charset=utf-8" http-equiv="content-type" />
-	<script type="text/javascript" src="../ckeditor.js"></script>
+	<script type="text/javascript" src="./../ckeditor.js"></script>
 	<script src="sample.js" type="text/javascript"></script>
 	<link href="sample.css" rel="stylesheet" type="text/css" />
 </head>
