--- a/Help/Editor/v.01/src/libs/ckeditor/_samples/fullpage.html
+++ b/Help/Editor/v.01/src/libs/ckeditor/_samples/fullpage.html
@@ -21,7 +21,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 
 				CKEDITOR.replace( 'editor1',
 					{
-						extraPlugins : 'docprops'
+						extraPlugins : 'docprops,pasteImage'
 					});
 
 			//]]>
