scroll in render base
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7431 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/libs/tinymce/examples/full.html
+++ b/IDE/v.02/modules/Wysiwyg/src/libs/tinymce/examples/full.html
@@ -30,10 +30,10 @@
 <!-- /TinyMCE -->
 
 </head>
-<body style='margin:0;padding:0 5px 5px 5px;'>
+<body style='margin:0;padding:5px 5px 5px 5px;'>
 
 		<div>
-			<textarea id="elm1" name="elm1"></textarea>
+			<textarea id="elm1" name="elm1" rows="1" height="100%"></textarea>
 		</div>
 
 </body>
